[FIX] z-index for img Tree under the text correction

--- a/src/Pages/BilanDeComp/bilan.scss
+++ b/src/Pages/BilanDeComp/bilan.scss
@@ -551,6 +551,7 @@
         .timeline {
             &.right-container {
                 padding: 0 3rem;
+                z-index: 2;
 
                 &.withMovie {
                     div {
